add update program